# time-tracker

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
tests/: conftest.py
tests/cli/: test_cli.py  test_formatters.py
tests/domain/: test_holidays.py  test_models.py  test_rules.py
tests/repository/: test_entry_repo.py
tests/services/: test_entry_service.py  test_export_service.py  test_saldo_service.py
zeiterfassung/: config.py  main.py
zeiterfassung/cli/: app.py  formatters.py
zeiterfassung/domain/: holidays.py  models.py  rules.py
zeiterfassung/repository/: db.py  entry_repo.py
zeiterfassung/services/: entry_service.py  export_service.py  saldo_service.py
